<resources>
    <string name="app_name" translatable="false">examenVickyBonilla</string>
    //Diálogos info
    <string name="saludo" translatable="false">BIENVENID@ A LA RED INTEGRADA DE FARMACIAS</string>
    <string name="farmacias" translatable="false">FARMACIAS</string>
    <string name="medicamentos" translatable="false">MEDICAMENTOS</string>
    //Diálogo Botones
    <string name="strCrearFarmacia" translatable="false">Crear Farmacia</string>
    <string name="strCrearMedicamento" translatable="false">Crear Medicamento</string>
    <string name="strCrear" translatable="false">Crear</string>
    <string name="strEditar" translatable="false">Editar</string>
    <string name="strEliminar" translatable="false">Eliminar</string>
    <string name="strActualizar" translatable="false">Actualizar</string>
    <string name="strVerMedicamentos" translatable="false">Ver medicamentos</string>
    <string name="strRegresar" translatable="false">Rgresar</string>
    //Campos input
    <string name="strTitCrearFarmacia" translatable="false">CREAR FARMACIA</string>
    <string name="strTitCrearMedicamento" translatable="false">CREAR MEDICAMENTO</string>
    <string name="strTitEditarFarmacia" translatable="false">EDITAR FARMACIA</string>
    <string name="strTitEditarMedicamento" translatable="false">EDITAR MEDICAMENTO</string>
    <string name="strPrompt" translatable="false">Ingrese los campos</string>
    <string name="strNombreFar" translatable="false">Nombre: </string>
    <string name="strDireccion" translatable="false">Dirección: </string>
    <string name="strNumTelefonico" translatable="false">Número: </string>
    <string name="strEnOperacion" translatable="false">En opración?: </string>
    <string name="strNombreMed" translatable="false">Nombre: </string>
    <string name="strPrecio" translatable="false">Precio: </string>
    <string name="strCantidad" translatable="false">Cantidad: </string>
    <string name="strAnioFabricacion" translatable="false">Fabricación: </string>
    <string name="strAnioCaducidad" translatable="false">Caducidad: </string>
    //colores
    <color name="colorFondo">#FBE2FF</color>
    <color name="colorFondoFar">#E2F5FF</color>
    <color name="colorTexPrincipal">#000000</color>
    <color name="colorTexSecundario">#FBFAEA</color>
    <color name="colorPrincipal">#673AB7</color>
    <color name="colorSecundario">#EF92FF</color>
    <color name="colorWarning">#E91E63</color>

</resources>