<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondoFar"
    tools:context=".ACrearFarmacia">

    <TextView
        android:id="@+id/txtcrearFarmacia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTitCrearFarmacia"
        android:textColor="@color/colorPrincipal"
        app:layout_constraintBottom_toTopOf="@+id/textNombreFarmacia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add_farmacia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strCrear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNombreFarmacia"
        app:layout_constraintVertical_bias="0.503" />

    <EditText
        android:id="@+id/textNombreFarmacia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/strNombreFar"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>