<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".ACrearMedicamento">

    <TextView
        android:id="@+id/txtCrearMedicamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTitCrearMedicamento"
        android:textColor="@color/colorPrincipal"
        app:layout_constraintBottom_toTopOf="@+id/textNombreMed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textNombreMed"
        android:layout_width="210dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/strNombreMed"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_medicamento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCrearMedicamento" />

    <Button
        android:id="@+id/btn_add_medicamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strCrear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNombreMed"
        app:layout_constraintVertical_bias="0.457" />
</androidx.constraintlayout.widget.ConstraintLayout>